# njab

./: .readthedocs.yaml  CHANGELOG.md  CONTRIBUTE.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: colab.yml  packaging.yml
docs/: README.md  conf.py  index.rst
docs/tutorial/: .gitignore  explorative_analysis.ipynb  explorative_analysis.py  log_reg.ipynb  log_reg.py
docs/tutorial/data/: README.md  process_Alzheimer_excel.py
docs/tutorial/data/alzheimer/: clinic_ml.csv  meta.csv  proteome.csv
docs/tutorial/data/prostate/: README.md  downlaod_data.py  prostate.csv
src/njab/: __init__.py
src/njab/io/: __init__.py
src/njab/pandas/: __init__.py
src/njab/plotting/: __init__.py  km.py  lifelines.py  metrics.py
src/njab/sklearn/: __init__.py  pca.py  preprocessing.py  scoring.py  types.py
src/njab/stats/: __init__.py  ancova.py  groups_comparision.py
test/: test_pandas.py  test_pkg.py  test_scoring.py  test_sklearn.py
tutorial/: explorative_analysis.ipynb  explorative_analysis.py  log_reg.ipynb  log_reg.py
tutorial/data/: README.md  process_Alzheimer_excel.py
