[project]
name = "njab"
authors = [{ name = "Henry Webel", email = "henry.webel@cpr.ku.dk" }]
description = "not Just Another Biomarker"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["bioinformatics", "biomarker"]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "omegaconf",
  "lifelines",
  "numpy",
  "pandas",
  "scikit-learn",
  "statsmodels",
  "umap-learn",
  "matplotlib",
  "mrmr_selection",
  "pingouin",
  "seaborn",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx-book-theme",
  "myst-nb",
  "ipywidgets",
  "sphinx-new-tab-link!=0.2.2",
]

[project.urls]
"Bug Tracker" = "https://github.com/RasmussenLab/njab/issues"
"Homepage" = "https://github.com/RasmussenLab/njab"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[tool.setuptools_scm]
