[metadata]
name = njab
version = 0.0.1
description = not Just Another Biomarker
long_description = file: README.md
author = Henry Webel
author_email = "Henry Webel" <henry.webel@cpr.ku.dk>
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
requires_python = "3.8"
package_dir =
    =src
packages = find:
include_package_data = False
install_requires =
    numpy
    pandas
    scikit-learn
    statsmodels
    umap-learn
    matplotlib
    mrmr_selection
    pingouin
    seaborn

[options.packages.find]
where = src
exclude =
    test*

[yapf]
based_on_style = pep8
