[metadata]
name = njab
version = 0.0.1
description = not Just Another Biomarker
long_description = file: README.md
author = Henry Webel
author_email = "Henry Webel" <henry.webel@cpr.ku.dk>
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
requires_python = "3.8"
package_dir =
    =src
packages = find:
include_package_data = False
install_requires =
    numpy
    pandas
    scikit-learn
    statsmodels
    umap-learn
    matplotlib
    mrmr_selection
    pingouin
    seaborn

[options.packages.find]
where = src
exclude =
    test*

[yapf]
based_on_style = pep8

######################
# Tool configuration #
######################

[mypy]
python_version = 3.8
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[flake8]
max-line-length = 120

[tool:pytest]
testpaths = test
addopts = --cov --strict-markers
xfail_strict = True

[coverage:run]
source = njab
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/njab
    */site-packages/njab

#########################
# Tox env configuration #
#########################

[tox:tox]
envlist = py38
isolated_build = True

[testenv]
deps =
    pytest
    pytest-cov
commands =
    pytest {posargs}

[testenv:typecheck]
deps =
    mypy
    pytest
    types-termcolor
commands =
    mypy --ignore-missing-imports {posargs:src tests}

[testenv:format]
skip_install = True
deps =
    yapf
    toml
commands =
    yapf {posargs:--recursive --diff src tests}

# autopep8 --recursive --diff src tests -a -a

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:src tests}